# SimpleTF-CPP

./: .gitignore  CMakeLists.txt  README.md  Utils.cpp  Utils.h  main.cpp
